# Airflow-Driven-ML-Pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  env.example  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
dags/: mlops_imdb_dag.py
data/artifacts/2025-01-03/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-04/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-05/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-06/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-07/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-08/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-09/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-10/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-11/: metrics.json  model.joblib  tfidf_vectorizer.joblib
data/artifacts/2025-01-12/: metrics.json  model.joblib  tfidf_vectorizer.joblib
docker/: Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.serve  docker-compose.yaml
include/configs/: params.yaml
include/expectations/: imdb_reviews.json
ops/: runbook.md
scripts/: seed_data.py
src/data/: ingest.py  validate.py
src/features/: build.py
src/monitor/: drift_job.py
src/serve/: app.py  deploy.py
src/train/: eval.py  register.py  train.py
src/utils/: io.py  metrics.py
tests/: test_dag_import.py  test_features.py  test_ingest.py  test_train_eval.py
(+283 files in other folders)
